fix: prisma npx

--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,4 +1,6 @@
 {
+  "useTabs": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "editor.formatOnSave": true
 }
