--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
