feat: create auth

--- a/server/.env
+++ b/server/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://admin:supersenha@localhost:5431/back2-c017"
+DATABASE_URL="postgresql://postgres:DC28uRFbtteD979YFv5z@containers-us-west-148.railway.app:6632/railway"
+SECRET_KEY= "batatafrita"
